feat: add authRoutes and authController
